# mvdec_fpmax

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  README.md  pyproject.toml
data/preprocessed_data/: data_demvk.csv  fused_representation.pkl  tiki_preprocessed.csv
data/raw_data/: seller_store_urls.csv
docs/: Clustering_English_ver02.docx
output/: ffs_results.csv  ffs_results.jsonl  without_ffs_results.csv  without_ffs_results.jsonl
src/: cli.py  config.py
src/data_preprocessing/: __init__.py  cli.py  features.py  io.py  pipeline.py  transforms.py  visualization.py
src/pipeline/: __init__.py  clustering.py  data.py  experiments.py  forward_selection.py  fpmax.py  io.py
src/representation_learning/: mvdec_representation_colab.ipynb
